test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/initialized_void.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  extern
  void
  identifier(v)
  =
  const int(0)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
